==> FanAnkai/F7/F767_RtosMqtt/QlySdk/sdk/platforms/src/esp8266_rtos/ql_device_basic_impl.c <==
#include "FreeRTOSConfig.h"
#include "lwip/ip4_addr.h"
#include "esp_system.h"
#include "esp_wifi.h"
#include "esp_libc.h"
#include "spi_flash.h"
#include "sockets.h"
#include "portmacro.h"
#include "openssl/ssl.h"
#include "ql_include.h"
#include "ql_device_basic_impl.h"
#include "ql_log.h"

int ICACHE_FLASH_ATTR ql_persistence_data_save( const void* data, unsigned int data_len )
{
    if(NULL == data || data_len > FLASH_SEC_SIZE)
    {
        return -1;
    }

    spi_flash_read((FLASH_DATA_BASEADDR + 3) * FLASH_SEC_SIZE, (unsigned int *)&g_stSaveFlag, sizeof(SAVE_FLAG));

    if(1 == g_stSaveFlag.flag) /* if section 1 is used currently, save to section 2 */
    {
        spi_flash_erase_sector(FLASH_DATA_BASEADDR + 2);
        spi_flash_write((FLASH_DATA_BASEADDR + 2) * FLASH_SEC_SIZE, (unsigned int *)data, data_len);

        /* set save-flag */
        g_stSaveFlag.flag = 2;
        spi_flash_erase_sector(FLASH_DATA_BASEADDR + 3);
        spi_flash_write((FLASH_DATA_BASEADDR + 3) * FLASH_SEC_SIZE, (unsigned int *)&g_stSaveFlag, sizeof(SAVE_FLAG));
    }
    else
    {
        spi_flash_erase_sector(FLASH_DATA_BASEADDR + 1);
        spi_flash_write((FLASH_DATA_BASEADDR + 1) * FLASH_SEC_SIZE, (unsigned int *)data, data_len);

         /* set save-flag */
        g_stSaveFlag.flag = 1;
        spi_flash_erase_sector(FLASH_DATA_BASEADDR + 3);
        spi_flash_write((FLASH_DATA_BASEADDR + 3) * FLASH_SEC_SIZE, (unsigned int *)&g_stSaveFlag, sizeof(SAVE_FLAG));
    }
    

    return 0;
}

int ICACHE_FLASH_ATTR ql_persistence_data_load( void* data, unsigned int data_len )
{
    if(NULL == data || data_len > FLASH_SEC_SIZE)
    {
        os_printf("data == NULL or data_len =%d",data_len);
        return -1;
    }
    
    spi_flash_read((FLASH_DATA_BASEADDR + 3) * FLASH_SEC_SIZE, (unsigned int *)&g_stSaveFlag, sizeof(SAVE_FLAG));

    if(1 == g_stSaveFlag.flag)
    {
        spi_flash_read((FLASH_DATA_BASEADDR + 1) * FLASH_SEC_SIZE, (unsigned int *)data, data_len);
    }
    else
    {
        spi_flash_read((FLASH_DATA_BASEADDR + 2) * FLASH_SEC_SIZE, (unsigned int *)data, data_len);
    }
    return 0;
}

int qlcloud_get_mac_arr(unsigned char mac_arr[6])
{
    if(!wifi_get_macaddr(STATION_IF, mac_arr))
    {
        return -1;
    }
    
    return 0;
}

int ql_udp_bind(ql_udp_socket_t *sock)
{
    if (sock == NULL)
    {
        return -1;
    }

    struct	sockaddr_in server_addr;
    ql_memset(&server_addr, 0, sizeof(server_addr));
    server_addr.sin_family = AF_INET;							
    server_addr.sin_addr.s_addr = htonl(INADDR_ANY);
    server_addr.sin_port = htons(sock->local_port);
    server_addr.sin_len = sizeof(server_addr);
    
    sock->sockfd = socket(AF_INET, SOCK_DGRAM, 0);
    if(sock->sockfd == -1)	
    {
        ql_log_err(ERR_EVENT_INTERFACE, "udp create err");
        return -1;
    }

    if(0 != bind(sock->sockfd, (struct sockaddr *)&server_addr, sizeof(server_addr)))
    {
        ql_log_err(ERR_EVENT_INTERFACE, "udp bind err");
        return -1;
    }
}

int ql_udp_recv(ql_udp_socket_t *sock, unsigned char *buf, unsigned int len, unsigned int timeout_ms)
{
    int ret = -1;
    struct sockaddr_in from;
    socklen_t fromlen;
    //int nNetTimeout = timeout_ms;
    fd_set readfds;
    struct timeval tv;

    FD_ZERO(&readfds);
    FD_SET(sock->sockfd, &readfds);    
    tv.tv_sec = timeout_ms / 1000;    
    tv.tv_usec = (timeout_ms % 1000) * 1000;

    ret = select(sock->sockfd + 1, &readfds, NULL, NULL, &tv);
    if(ret >= 0)
    {
        //setsockopt(sock->sockfd, SOL_SOCKET, SO_RCVTIMEO, (char *)&nNetTimeout, sizeof(int));
        if(FD_ISSET(sock->sockfd, &readfds))
        {
            ql_memset(&from, 0, sizeof(from));
            fromlen = sizeof(struct sockaddr_in);
            ret = recvfrom(sock->sockfd, buf, len, 0, (struct sockaddr *)&from, &fromlen);
            if(ret > 0)
            {
                sock->remote_ip = ntohl(from.sin_addr.s_addr);
                sock->remote_port = ntohs(from.sin_port);
            }
            else
            {
                ql_log_err(ERR_EVENT_RX_DATA, "udp_r err:%d", ret);
                ret = -1;
            }
        }
        else
        {
            ret = 0;
        }
    }
    else
    {
        ql_log_err(ERR_EVENT_RX_DATA, "udp_r select err:%d", ret);
        ret = -1;
    }

    return ret;
}

int _ql_tcp_connect(ql_socket_t *sock, unsigned char *ip, unsigned short port, unsigned int timeout_ms)
{
    struct sockaddr_in addr;

    if(NULL == sock || NULL == ip) 
    {
        return -1;
    }

#ifdef DEBUG_DATA_OPEN
    //ql_printf("ql_tcp_connect %s:%d\r\n", ip, port);
#endif
    sock->sockfd = socket(PF_INET, SOCK_STREAM, 0);
    if (sock->sockfd == -1) {
        ql_log_err(ERR_EVENT_INTERFACE, "tcp socket err");
        close(sock->sockfd);
        return -1;
    }

    ql_memset(&addr, 0, sizeof(addr));
    addr.sin_family = AF_INET;
    addr.sin_port = htons(port);
    addr.sin_addr.s_addr	= inet_addr(ip);
    
    if(0 != connect(sock->sockfd, (struct sockaddr *)&addr, sizeof(struct sockaddr)))
    {
        ql_log_err(ERR_EVENT_INTERFACE, "tcp conn err");
        close(sock->sockfd);
        sock->sockfd = -1;
        return -1;
    }

    return 0;
}

int _ql_tcp_send(ql_socket_t *sock,  unsigned char *buf, unsigned int len, unsigned int timeout_ms)
{
    int ret = -1;
    int nNetTimeout = timeout_ms;

    setsockopt(sock->sockfd, SOL_SOCKET, SO_SNDTIMEO, (char *)&nNetTimeout, sizeof(int));
    
    ret = write(sock->sockfd, buf, len) ;
    if(ret >= 0)
    {
        if(ret != len)
        {
            ql_log_err(ERR_EVENT_TX_DATA, "tcp_s len:%d,ret:%d", len, ret);
        }
    }
    else
    {
        ql_log_err(ERR_EVENT_TX_DATA, "tcp_s err:%d", ret);
        ret = -1;
    }

    return ret;
}

int _ql_tcp_recv(ql_socket_t *sock, unsigned char *buf, unsigned int size, unsigned int timeout_ms)
{
    int ret = -1;
    int nNetTimeout = timeout_ms;
    fd_set readfds;
    struct timeval tv;

    FD_ZERO(&readfds);
    FD_SET(sock->sockfd, &readfds);    
    tv.tv_sec = timeout_ms / 1000;    
    tv.tv_usec = (timeout_ms % 1000) * 1000;

    ret = select(sock->sockfd + 1, &readfds, NULL, NULL, &tv);
    if(ret >= 0)
    {
        if(FD_ISSET(sock->sockfd, &readfds))
        {
            //setsockopt(sock->sockfd, SOL_SOCKET, SO_RCVTIMEO, (char *)&nNetTimeout, sizeof(int));
            ret = read(sock->sockfd, buf, size);
            if(ret >= 0)
            {
                
            }
            else
            {
                ql_log_err(ERR_EVENT_RX_DATA, "tcp_r err:%d", ret);
                ret = -1;
            }
        }
    }
    else
    {
        ql_log_err(ERR_EVENT_RX_DATA, "tcp_r select err:%d", ret);
        ret = -1;
    }

    return ret;
}

int ql_tcp_connect(ql_socket_t *sock, unsigned char *ip, unsigned short port, unsigned int timeout_ms)
{
    if(g_client_handle.encrypt_type == QL_ENCRYPT_TYPE_SSL)
        return _ql_tcp_connect_ssl(sock, ip, port, timeout_ms);
    else
        return _ql_tcp_connect(sock, ip, port, timeout_ms);
}

int ql_tcp_send(ql_socket_t *sock,  unsigned char *buf, unsigned int len, unsigned int timeout_ms)
{
    if(g_client_handle.encrypt_type == QL_ENCRYPT_TYPE_SSL)
        return _ql_tcp_send_ssl(sock, buf, len, timeout_ms);
    else
        return _ql_tcp_send(sock, buf, len, timeout_ms);
}

int ql_tcp_recv(ql_socket_t *sock, unsigned char *buf, unsigned int size, unsigned int timeout_ms)
{
    if(g_client_handle.encrypt_type == QL_ENCRYPT_TYPE_SSL)
        return _ql_tcp_recv_ssl(sock, buf, size, timeout_ms);
    else
        return _ql_tcp_recv(sock, buf, size, timeout_ms);
}

int32_t ql_set_wifi_info(uint8_t mode,wifi_info_t* info)
{

    if(NULL == info)
    {
        return -1;
    }
    if(STATION_MODE == mode )
    { 

        wifi_set_opmode(STATION_MODE);
        struct station_config config;
        wifi_station_dhcpc_set_maxtry(5);

        ql_memset(&config,0x00,sizeof( struct station_config));
        if( wifi_station_get_config(&config) )
        {       
            if((0 == strncmp(config.ssid,info->ssid,32)) && (0 == strncmp(config.password,info->password,64)))
            {        
                ql_log_warn("this wifi existed\r\n");            
                return 0;
            }
            else
            {     
                ql_memset(&config,0x00,sizeof(struct station_config));
                ql_memcpy(config.ssid, info->ssid , 32);
                ql_memcpy(config.password, info->password , 64);

                if(TRUE == wifi_station_set_config(&config))
                {
                    printf("[NEW]ssid:%s passwd:%s\r\n",config.ssid,config.password);
                }
                else
                {
                    ql_log_err(ERR_EVENT_INTERFACE, "station con err");
                    return -1;
                }    
            }
        }
    }
    else if(SOFTAP_MODE == mode)
    {     
        smartconfig_stop();
        wifi_set_opmode(SOFTAP_MODE);
        struct  softap_config config;
        ql_memset(&config, 0x00,sizeof(struct softap_config ));
    
        if( wifi_softap_get_config(&config) )
        {        
            if((0 == strcmp(config.ssid,info->ssid)) && (0 == strcmp(config.password,info->password)))
            {        
                ql_log_warn("this wifi is same as before config \r\n");            
                return 0;
            }
            else
            {               
                ql_memcpy(config.ssid, info->ssid , ql_strlen(info->ssid)+1);
                //ql_log_info("ql_strlen(info->password) = %d ,info->password = %s\r\n",ql_strlen(info->password),info->password);
                if(0 == ql_strlen(info->password))
                {
                    ql_memset(config.password, 0x00, sizeof(config.password));
                    config.authmode    =   AUTH_OPEN;
                }
                else
                {
                    ql_memcpy(config.password, info->password , ql_strlen(info->password)+1);
                    config.authmode    =   AUTH_WPA_WPA2_PSK;
                }
                config.ssid_len    =   0;       
                config.max_connection  =   1;  
                
                if(TRUE == wifi_softap_set_config(&config))
                {
                    ql_log_info("[NEW] ssid:%s password:%s success!\r\n",config.ssid,config.password);
                }
                else
                {
                    ql_log_err(ERR_EVENT_INTERFACE, "ap config err");
                    return -1;
                }                
            }
        }
    }   
    else
    {   
        return -1 ;   
    }

    return 0;
}
